--- a/.github/workflows/general.yml
+++ b/.github/workflows/general.yml
@@ -37,11 +37,11 @@ jobs:
       SQLX_FEATURES: "rustls,postgres"
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
       - name: Cache dependencies
         id: cache-dependencies
-        uses: actions/cache@v2
+        uses: actions/cache@v3
         with:
           path: |
             ~/.cargo/registry
@@ -57,7 +57,7 @@ jobs:
           override: true
 
       - name: Cache sqlx-cli
-        uses: actions/cache@v2
+        uses: actions/cache@v3
         id: cache-sqlx
         with:
           path: |
@@ -95,7 +95,7 @@ jobs:
     name: Rustfmt
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
       - uses: actions-rs/toolchain@v1
         with:
           toolchain: stable
@@ -123,7 +123,7 @@ jobs:
       SQLX_FEATURES: "rustls,postgres"
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
       - name: Install stable toolchain
         uses: actions-rs/toolchain@v1
@@ -133,7 +133,7 @@ jobs:
           override: true
 
       - name: Cache sqlx-cli
-        uses: actions/cache@v2
+        uses: actions/cache@v3
         id: cache-sqlx
         with:
           path: |
@@ -164,62 +164,62 @@ jobs:
           token: ${{ secrets.GITHUB_TOKEN }}
           args: -- -D warnings
 
-  coverage:
-    name: Code coverage
-    runs-on: ubuntu-latest
-    services:
-      postgres:
-        image: postgres:12
-        env:
-          POSTGRES_USER: postgres
-          POSTGRES_PASSWORD: password
-          POSTGRES_DB: postgres
-        ports:
-          - 5432:5432
-      redis:
-        image: redis:6
-        ports:
-          - 6379:6379
-    env:
-      SQLX_VERSION: 0.6.2
-      SQLX_FEATURES: "rustls,postgres"
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v2
+#  coverage:
+#    name: Code coverage
+#    runs-on: ubuntu-latest
+#    services:
+#      postgres:
+#        image: postgres:12
+#        env:
+#          POSTGRES_USER: postgres
+#          POSTGRES_PASSWORD: password
+#          POSTGRES_DB: postgres
+#        ports:
+#          - 5432:5432
+#      redis:
+#        image: redis:6
+#        ports:
+#          - 6379:6379
+#    env:
+#      SQLX_VERSION: 0.6.2
+#      SQLX_FEATURES: "rustls,postgres"
+#    steps:
+#      - name: Checkout repository
+#        uses: actions/checkout@v3
 
-      - name: Install stable toolchain
-        uses: actions-rs/toolchain@v1
-        with:
-          toolchain: stable
-          override: true
+ #     - name: Install stable toolchain
+ #       uses: actions-rs/toolchain@v1
+ #       with:
+ #         toolchain: stable
+ #         override: true
 
-      - name: Cache sqlx-cli
-        uses: actions/cache@v2
-        id: cache-sqlx
-        with:
-          path: |
-            ~/.cargo/bin/sqlx
-          key: ${{ runner.os }}-sqlx-${{ env.SQLX_VERSION }}
+  #    - name: Cache sqlx-cli
+  #      uses: actions/cache@v3
+  #      id: cache-sqlx
+  #      with:
+  #        path: |
+  #         ~/.cargo/bin/sqlx
+  #         key: ${{ runner.os }}-sqlx-${{ env.SQLX_VERSION }}
 
-      - name: Install sqlx-cli 
-        uses: actions-rs/cargo@v1
-        if: steps.cache-sqlx.outputs.cache-hit == false
-        with:
-          command: install 
-          args: >
-            sqlx-cli
-            --force
-            --version=${{ env.SQLX_VERSION }}
-            --features ${{ env.SQLX_FEATURES }}
-            --no-default-features
-            --locked
+  #    - name: Install sqlx-cli
+  #      uses: actions-rs/cargo@v1
+  #      if: steps.cache-sqlx.outputs.cache-hit == false
+  #      with:
+  #        command: install
+  #        args: >
+  #          sqlx-cli
+  #          --force
+  #          --version=${{ env.SQLX_VERSION }}
+  #          --features ${{ env.SQLX_FEATURES }}
+  #          --no-default-features
+  #          --locked
 
-      - name: Migrate database
-        run: |
-          sudo apt-get install libpq-dev -y
-          SKIP_DOCKER=true ./scripts/init_db.sh
+  #    - name: Migrate database
+  #      run: |
+  #        sudo apt-get install libpq-dev -y
+  #        SKIP_DOCKER=true ./scripts/init_db.sh
 
-      - name: Run cargo-tarpaulin
-        uses: actions-rs/tarpaulin@v0.1
-        with:
-          args: '--ignore-tests --avoid-cfg-tarpaulin'
+#      - name: Run cargo-tarpaulin
+#        uses: actions-rs/tarpaulin@v0.1
+#        with:
+#          args: '--ignore-tests --avoid-cfg-tarpaulin'
